# tinyReflection

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  metareflect.hxx  test.cxx  test.generated.hxx  test.hxx
PreCompilePass/: precompile.cmake
